# Tetris-PLP

./: README.md
haskell/: tetris.cabal
haskell/src/: Main.hs  Tetris.hs  TetrisGrafico.hs
